--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [ ],
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
@@ -20,6 +20,8 @@
     "mongoose": "^8.19.2",
     "node-geocoder": "^4.4.1",
     "nodemon": "^3.1.10",
+    "os": "^0.1.2",
+    "pidusage": "^4.0.1",
     "playwright": "^1.56.1",
     "uuid": "^13.0.0"
   }
